# RobotEconomist

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  makefile  networkxreader.py  pyproject.toml  setup.cfg
annotation/: Instructions for causal annotation.docx
config/: config.cfg  config.json  econ.yml
design/: robotecon2.fig
econ.egg-info/: PKG-INFO  SOURCES.txt
graffles/: screens.graffle  screens_v2.graffle
metadata/: ivis.results.jsonl  ivis.tsv  notes.md  process.ivis.sh
old/: auditor.py  make_iv_phrase_counts.py  query_neighbors.py
scrapers/: download_and_process_isre_url.slurm  download_and_process_mnsc_url.slurm  download_and_process_nber.slurm  download_informs_abstracts.sh  download_informs_papers.sh  download_nber_abstracts.slurm  get_informs_paper_urls.sh  informs_abstracts_downloader.py  informs_abstracts_post_processor.py  informs_scraper.sh  isre.toc.txt  isre.urls.txt  mnsc.urls.txt  nber_abstract_downloader.py  process_abstracts_to_sentences.py  process_nber.py
scripts/: build_notice.sh  doccano_helper.py  doccano_helper2.py  file_list_2_docbin.py  hunt_for_violations.py  initenv.slurm  interactive_rule_based_matching_for_msu_annotation.py  json2annotation.sh  make_conda_on_alpine.slurm  merge_doc_bins.py  msu_annotation_2_connl.py  my_linter.sh  nber_abstracts_to_txt.py  pipeline.slurm  process_corpus_locally_with_spacy.sh  spacy.slurm
seandec16/: Bag_of_Words_LogReg.ipynb  Bag_of_Words_LogReg.py  Causal_Text.csv  all_data.txt  causal_text.csv  make_training_data.sh  no.txt  notes.md  seeds.txt  yes.txt
src/: corpus.py  main.py
(+269 files in other folders)
