[metadata]
name = roboteconomist
version = 0.7.0

[options]
packages = src
           src.dags
           src.path_printers
           src.graph_builders
           src.graph_builders.helpers
install_requires =
    networkx
    rich

[options.entry_points]
console_scripts =
    econ = src.main:iv

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.json